Correct name spelling in abstract.html

--- a/src/app/components/abstract/abstract.html
+++ b/src/app/components/abstract/abstract.html
@@ -11,7 +11,7 @@
           目前，我在<a href="https://www.sensetime.com/en" target="_blank" rel="noopener noreferrer">商汤科技</a>和<a href="https://www.mmlab-ntu.com/" target="_blank" rel="noopener noreferrer">MMLab&#64;NTU</a>进行研究工作。
           我有幸师从<a href="https://liuziwei7.github.io/" target="_blank" rel="noopener noreferrer">刘子纬教授</a>，
           同时也非常感谢<a href="https://brianboli.com/" target="_blank" rel="noopener noreferrer">李博</a>、
-          <a href="https://caizhongang.com/" target="_blank" rel="noopener noreferrer">蔡忠刚</a>和<a href="https://scholar.google.com/citations?user=jZH2IPYAAAAJ&hl=en" target="_blank" rel="noopener noreferrer">杨磊</a>给予我的悉心指导与帮助。
+          <a href="https://caizhongang.com/" target="_blank" rel="noopener noreferrer">蔡中昂</a>和<a href="https://scholar.google.com/citations?user=jZH2IPYAAAAJ&hl=en" target="_blank" rel="noopener noreferrer">杨磊</a>给予我的悉心指导与帮助。
           我的研究兴趣主要集中在<em>多模态（统一）模型</em>和<em>空间智能</em>领域。
         </p>
         <p>
