--- a/src/app/components/footer/footer.html
+++ b/src/app/components/footer/footer.html
@@ -1,3 +1,9 @@
 <footer class="footer">
-  {{ lastUpdated() }}
+  <div>{{ lastUpdated() }}</div>
+  <div class="footer-source">
+    <span>{{ buildInfo() }}</span>
+    <a [href]="sourceRepo" target="_blank" rel="noopener noreferrer" class="icon-link footer-github-link" aria-label="GitHub source repository">
+      <i class="ph-duotone ph-github-logo"></i>
+    </a>
+  </div>
 </footer>
