Adjust zh translations per naming feedback

--- a/src/app/components/abstract/abstract.html
+++ b/src/app/components/abstract/abstract.html
@@ -11,7 +11,7 @@
           目前，我在<a href="https://www.sensetime.com/en" target="_blank" rel="noopener noreferrer">商汤科技</a>和<a href="https://www.mmlab-ntu.com/" target="_blank" rel="noopener noreferrer">MMLab&#64;NTU</a>进行研究工作。
           我有幸师从<a href="https://liuziwei7.github.io/" target="_blank" rel="noopener noreferrer">刘子纬教授</a>，
           同时也非常感谢<a href="https://brianboli.com/" target="_blank" rel="noopener noreferrer">李博</a>、
-          <a href="https://caizhongang.com/" target="_blank" rel="noopener noreferrer">蔡中昂</a>和<a href="https://scholar.google.com/citations?user=jZH2IPYAAAAJ&hl=en" target="_blank" rel="noopener noreferrer">杨磊</a>给予我的悉心指导与帮助。
+          <a href="https://caizhongang.com/" target="_blank" rel="noopener noreferrer">蔡中昂</a>和<a href="https://scholar.google.com/citations?user=jZH2IPYAAAAJ&hl=en" target="_blank" rel="noopener noreferrer">杨磊老师</a>给予我的悉心指导与帮助。
           我的研究兴趣主要集中在<em>多模态（统一）模型</em>和<em>空间智能</em>领域。
         </p>
         <p>
@@ -20,7 +20,7 @@
           此外，我还参加了<a href="https://icpc.global/" target="_blank" rel="noopener noreferrer">ICPC</a>竞赛，
           并在2022年昆明亚洲区域赛中斩获<a href="assets/pdf/awards/Kunming.pdf" target="_blank" rel="noopener noreferrer">金牌</a>，
           在2022年南京亚洲区域赛中获得<a href="assets/pdf/awards/Nanjing.pdf" target="_blank" rel="noopener noreferrer">银牌</a>。
-          我同时也是<a href="https://ntu-icpc.github.io/npc/" target="_blank" rel="noopener noreferrer">南洋编程竞赛</a>的贡献者之一。
+          我同时也是<a href="https://ntu-icpc.github.io/npc/" target="_blank" rel="noopener noreferrer">Nanyang Programming Contest</a>的贡献者之一。
         </p>
         <p>
           业余时间我喜欢下国际象棋，我的 Lichess ID 是 <a href="https://lichess.org/@/pufanyi" target="_blank" rel="noopener noreferrer">&#64;pufanyi</a>，目前的快棋等级分为 2086。
@@ -34,7 +34,7 @@
     @case ('ja') {
       <div class="abstract-content">
         <p>
-          現在、<a href="https://www.ntu.edu.sg/" target="_blank" rel="noopener noreferrer">南洋理工大学</a>の学部4年生で、
+          現在、<a href="https://www.ntu.edu.sg/" target="_blank" rel="noopener noreferrer">Nanyang Technological University (NTU)</a>の学部4年生で、
           <a href="https://www.ntu.edu.sg/education/undergraduate-programme/bachelor-of-science-in-data-science-artificial-intelligence" target="_blank" rel="noopener noreferrer">データサイエンスと人工知能</a>を専攻しています。
         </p>
         <p>
@@ -45,8 +45,8 @@
           現在の研究関心は、<em>マルチモーダル（統合）モデル</em>と<em>空間知能</em>にあります。
         </p>
         <p>
-          <a href="http://www.sxyz.net/" target="_blank" rel="noopener noreferrer">紹興市第一高等学校</a>在学中は、
-          <a href="https://www.noi.cn/" target="_blank" rel="noopener noreferrer">情報オリンピック</a>に参加しました。
+          <a href="http://www.sxyz.net/" target="_blank" rel="noopener noreferrer">Shaoxing No.1 High School</a>在学中は、
+          <a href="https://www.noi.cn/" target="_blank" rel="noopener noreferrer">NOI (Olympiad in Informatics)</a>に参加しました。
           また、<a href="https://icpc.global/" target="_blank" rel="noopener noreferrer">ICPC（国際大学対抗プログラミングコンテスト）</a>にも出場し、
           2022年の昆明アジア地区大会で<a href="assets/pdf/awards/Kunming.pdf" target="_blank" rel="noopener noreferrer">金メダル</a>、
           南京アジア地区大会で<a href="assets/pdf/awards/Nanjing.pdf" target="_blank" rel="noopener noreferrer">銀メダル</a>を獲得しました。
