--- a/src/app/components/experience/experience.html
+++ b/src/app/components/experience/experience.html
@@ -1,7 +1,7 @@
 <app-section [number]="3" [title]="t.experience[lang()]" id="experience">
   @switch (lang()) {
     @case ('zh') {
-      <app-entry title="商汤科技研究院" date="2025年9月 – 至今">
+      <app-entry title="商汤科技" date="2025年9月 – 至今">
         <span detail>研究实习生（空间智能方向），新加坡</span>
         <li>从事空间智能领域研究，重点关注统一多模态模型的优化工作</li>
         <li>交付 SenseNova-SI 模型，在空间理解任务上建立了新的业界领先标准 (SOTA)</li>
