--- a/src/app/components/teaching/teaching.html
+++ b/src/app/components/teaching/teaching.html
@@ -1,16 +1,16 @@
 <app-section [number]="5" [title]="t.teaching[lang()]" id="teaching-activities">
   @switch (lang()) {
     @case ('zh') {
-      <app-entry title="教学讲师，南洋理工大学 SC1008 C & C++ 程序设计" date="2026年1月 – 至今">
-        <li>指导50名初学者学习C/C++核心语法和方法</li>
+      <app-entry title="教学讲师，南洋理工大学 SC1008 C & C++ Programming" date="2026年1月 – 至今">
+        <li>指导50名初学者学习 C/C++ 核心语法和方法</li>
       </app-entry>
-      <app-entry title="南洋编程竞赛组织者" date="2025年1月 – 至今">
+      <app-entry title="Nanyang Programming Contest 组织者" date="2025年1月 – 至今">
         <li>为非ICPC学生组织了5场竞赛和教程</li>
       </app-entry>
       <app-entry title="南洋理工大学计算与数据科学学生俱乐部" date="2024年11月 – 至今">
-        <li>管理130+成员的Telegram群组；分享AI/ML学习资源</li>
+        <li>管理130+成员的 Telegram 群组；分享 AI/ML 学习资源</li>
       </app-entry>
-      <app-entry title="助教，南洋理工大学 SC1003 计算思维导论" date="2024年8月 – 2024年12月">
+      <app-entry title="助教，南洋理工大学 SC1003 Introduction to Computational Thinking" date="2024年8月 – 2024年12月">
         <li>指导20名初学者学习Python语法和数据处理</li>
       </app-entry>
     }
