--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -5,7 +5,7 @@
     <hr class="title-rule-bottom" />
   </div>
 
-  <app-image-lightbox src="me.jpg" avif="me.avif" webp="me.webp" alt="Fanyi Pu" imgClass="author-photo" width="100" height="100" />
+  <app-image-lightbox src="me.avif" alt="Fanyi Pu" imgClass="author-photo" width="100" height="100" />
   <div class="affiliation">
     @switch (lang()) {
       @case ('zh') {
