--- a/src/app/components/table-of-contents/table-of-contents.html
+++ b/src/app/components/table-of-contents/table-of-contents.html
@@ -12,40 +12,35 @@
   }
 </button>
 
-<div autoAnimate>
-  @if (open()) {
-    <nav
-      class="toc"
-      aria-label="Table of Contents"
-      cdkTrapFocus
-      [cdkTrapFocusAutoCapture]="!isWide()"
-      (keydown.escape)="open.set(false)"
-      tabindex="-1"
-    >
-      <div class="toc-title">{{ tocTitle[lang()] }}</div>
-      <ol class="toc-list">
-        @for (s of sections; track s.id) {
-          <li [class.toc-active]="scrollSpy.activeId() === s.id">
-            <a [href]="'#' + s.id" (click)="onLinkClick()">
-              @if (s.number !== null) {
-                <span class="toc-number">{{ s.number }}</span>
-              }
-              {{ s.title[lang()] }}
-            </a>
-          </li>
-        }
-      </ol>
-    </nav>
-  }
-</div>
+<nav
+  class="toc"
+  [class.toc-visible]="open()"
+  aria-label="Table of Contents"
+  [cdkTrapFocus]="open() && !isWide()"
+  [cdkTrapFocusAutoCapture]="open() && !isWide()"
+  (keydown.escape)="open.set(false)"
+  tabindex="-1"
+>
+  <div class="toc-title">{{ tocTitle[lang()] }}</div>
+  <ol class="toc-list">
+    @for (s of sections; track s.id) {
+      <li [class.toc-active]="scrollSpy.activeId() === s.id">
+        <a [href]="'#' + s.id" (click)="scrollTo($event, s.id)">
+          @if (s.number !== null) {
+            <span class="toc-number">{{ s.number }}</span>
+          }
+          {{ s.title[lang()] }}
+        </a>
+      </li>
+    }
+  </ol>
+</nav>
 
-@if (open() && !isWide()) {
-  <div
-    class="toc-backdrop"
-    (click)="open.set(false)"
-    (keydown.escape)="open.set(false)"
-    tabindex="-1"
-    role="button"
-    aria-label="Close table of contents"
-  ></div>
-}
+<div
+  class="toc-backdrop"
+  [class.toc-backdrop-visible]="open() && !isWide()"
+  (click)="open.set(false)"
+  tabindex="-1"
+  role="button"
+  aria-label="Close table of contents"
+></div>
