refactor: update directive selector from autoAnimate to appAutoAnimate across components

--- a/src/app/components/abstract/abstract.html
+++ b/src/app/components/abstract/abstract.html
@@ -1,4 +1,4 @@
-<section class="abstract" id="abstract" autoAnimate>
+<section class="abstract" id="abstract" appAutoAnimate>
   <h2 class="abstract-heading">{{ t.abstract[lang()] }}</h2>
   @switch (lang()) {
     @case ('zh') {
