--- a/src/app/components/language-switcher/language-switcher.html
+++ b/src/app/components/language-switcher/language-switcher.html
@@ -1,4 +1,4 @@
-<div class="lang-switcher" autoAnimate>
+<div class="lang-switcher" appAutoAnimate>
   <button
     class="lang-trigger"
     (click)="toggle()"
