--- a/src/app/components/section/section.html
+++ b/src/app/components/section/section.html
@@ -1,4 +1,4 @@
-<section class="section" [id]="sectionId()" autoAnimate>
+<section class="section" [id]="sectionId()" appAutoAnimate>
   <h2 class="section-heading">{{ number() }} &nbsp; {{ title() }}</h2>
   <ng-content />
 </section>
