--- a/src/app/components/theme-toggle/theme-toggle.html
+++ b/src/app/components/theme-toggle/theme-toggle.html
@@ -1,5 +1,5 @@
 <button
-  autoAnimate
+  appAutoAnimate
   (click)="themeService.toggle()"
   [attr.aria-label]="'Switch to ' + (themeService.theme() === 'light' ? 'dark' : 'light') + ' mode'"
   [attr.title]="'Switch to ' + (themeService.theme() === 'light' ? 'dark' : 'light') + ' mode'"
