--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -6,7 +6,7 @@
   </div>
 
   <app-image-lightbox src="me.avif" alt="Fanyi Pu" imgClass="author-photo" width="100" height="100" />
-  <div class="affiliation" autoAnimate>
+  <div class="affiliation" appAutoAnimate>
     @switch (lang()) {
       @case ('zh') {
         计算与数据科学学院<br />
