feat: add blog link to header component

--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -50,5 +50,8 @@
     <a href="https://x.com/pufanyi" target="_blank" rel="noopener noreferrer" class="icon-link" aria-label="X (Twitter)">
       <i class="ph-duotone ph-x-logo"></i>
     </a>
+    <a href="https://blog.pufanyi.com" target="_blank" rel="noopener noreferrer" class="icon-link" aria-label="Blog">
+      <i class="ph-duotone ph-notebook"></i>
+    </a>
   </div>
 </header>
