--- a/src/app/components/table-of-contents/table-of-contents.html
+++ b/src/app/components/table-of-contents/table-of-contents.html
@@ -6,9 +6,9 @@
   title="Table of Contents"
 >
   @if (open()) {
-    <i class="ph-duotone ph-x" style="font-size: 20px"></i>
+    <i class="ph ph-x" style="font-size: 20px"></i>
   } @else {
-    <i class="ph-duotone ph-list" style="font-size: 20px"></i>
+    <i class="ph ph-list" style="font-size: 20px"></i>
   }
 </button>
 
