--- a/src/app/components/theme-toggle/theme-toggle.html
+++ b/src/app/components/theme-toggle/theme-toggle.html
@@ -5,8 +5,8 @@
   [attr.title]="'Switch to ' + (themeService.theme() === 'light' ? 'dark' : 'light') + ' mode'"
 >
   @if (themeService.theme() === 'light') {
-    <i class="ph-duotone ph-moon" style="font-size: 20px"></i>
+    <i class="ph ph-moon" style="font-size: 20px"></i>
   } @else {
-    <i class="ph-duotone ph-sun" style="font-size: 20px"></i>
+    <i class="ph ph-sun" style="font-size: 20px"></i>
   }
 </button>
