--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -24,34 +24,34 @@
   </div>
   <div class="contact-info">
     <span class="contact-item">
-      <i class="ph-duotone ph-phone" style="vertical-align: middle; margin-right: 4px; font-size: 18px"></i>
+      <i class="ph ph-phone" style="vertical-align: middle; margin-right: 4px; font-size: 18px"></i>
       <a href="tel:+6583981454">+65 8398-1454</a>
     </span>
     <span class="separator"> | </span>
     <span class="contact-item">
-      <i class="ph-duotone ph-envelope" style="vertical-align: middle; margin-right: 4px; font-size: 18px"></i>
+      <i class="ph ph-envelope" style="vertical-align: middle; margin-right: 4px; font-size: 18px"></i>
       <a href="mailto:FPU001@e.ntu.edu.sg">FPU001&#64;e.ntu.edu.sg</a>
     </span>
   </div>
 
   <div class="links">
     <a href="https://pufanyi.com" target="_blank" rel="noopener noreferrer" class="icon-link" aria-label="Homepage">
-      <i class="ph-duotone ph-globe"></i>
+      <i class="ph ph-globe"></i>
     </a>
     <a href="https://github.com/pufanyi" target="_blank" rel="noopener noreferrer" class="icon-link" aria-label="GitHub">
-      <i class="ph-duotone ph-github-logo"></i>
+      <i class="ph ph-github-logo"></i>
     </a>
     <a href="https://scholar.google.com/citations?user=58tv6skAAAAJ" target="_blank" rel="noopener noreferrer" class="icon-link" aria-label="Google Scholar">
-      <i class="ph-duotone ph-graduation-cap"></i>
+      <i class="ph ph-graduation-cap"></i>
     </a>
     <a href="https://linkedin.com/in/pufanyi" target="_blank" rel="noopener noreferrer" class="icon-link" aria-label="LinkedIn">
-      <i class="ph-duotone ph-linkedin-logo"></i>
+      <i class="ph ph-linkedin-logo"></i>
     </a>
     <a href="https://x.com/pufanyi" target="_blank" rel="noopener noreferrer" class="icon-link" aria-label="X (Twitter)">
-      <i class="ph-duotone ph-x-logo"></i>
+      <i class="ph ph-x-logo"></i>
     </a>
     <a href="https://blog.pufanyi.com" target="_blank" rel="noopener noreferrer" class="icon-link" aria-label="Blog">
-      <i class="ph-duotone ph-notebook"></i>
+      <i class="ph ph-notebook"></i>
     </a>
   </div>
 </header>
