--- a/src/app/components/language-switcher/language-switcher.html
+++ b/src/app/components/language-switcher/language-switcher.html
@@ -1,6 +1,6 @@
 <div class="lang-switcher" appAutoAnimate>
   <button
-    class="lang-trigger"
+    class="toolbar-btn lang-trigger"
     (click)="toggle()"
     [attr.aria-label]="triggerLabel[langService.current()]"
     [attr.title]="triggerLabel[langService.current()]"
