--- a/src/app/components/print-button/print-button.html
+++ b/src/app/components/print-button/print-button.html
@@ -1,3 +1,3 @@
-<button (click)="print()" aria-label="Export as PDF" title="Export as PDF / Print">
+<button class="toolbar-btn" (click)="print()" aria-label="Export as PDF" title="Export as PDF / Print">
   <i class="ph ph-printer" style="font-size: 20px"></i>
 </button>
